--- a/src/pages/login/LoginPg.module.scss
+++ b/src/pages/login/LoginPg.module.scss
@@ -63,7 +63,7 @@
 .card {
   text-align: center;
   color: white;
-  background: linear-gradient(180deg, #92002F 0%, #85171B 100%);
+  background: linear-gradient(180deg, #92002f 0%, #85171b 100%);
   /* Add shadows to create the "card" effect */
   transition: 0.3s;
   width: auto;
