--- a/src/pages/help/HelpNav.module.scss
+++ b/src/pages/help/HelpNav.module.scss
@@ -151,3 +151,19 @@
     margin: 10px 20px 10px 20px;
   }
 }
+
+.backButton {
+  display: flex;
+  align-items: center;
+  flex-direction: row-reverse;
+  border: none;
+  border-radius: 4px;
+  background-color: #92002f;
+  color: white;
+}
+
+.goBackWrap {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
